# NeoStats-warserv

./: .gitattributes  ChangeLog  LICENSE  Makefile.am  Makefile.in  README.WarServ  RELNOTES  RELNOTES.win32.txt  aclocal.m4  configure  configure.in  events.c  modconfig.h.in  modconfigwin32.h  play.c  pulse.xml  warserv.c  warserv.h  warserv.sln  warserv.vcproj  warserv_help.c
win32/: WarServ.qsp  buildwin32snap.bat  neostatsversion.rc
