dnl Process this file with autoconf to produce a configure script.
AC_INIT(warserv.c)
AC_CONFIG_HEADER(modconfig.h)
PACKAGE=WarServ
MODULE_MAJOR=1
MODULE_MINOR=2
VERSION=$MODULE_MAJOR.$MODULE_MINOR
AC_DEFINE_UNQUOTED(MODULE_VERSION, "$VERSION")
AC_DEFINE_UNQUOTED(MODULE_MAJOR, "$MODULE_MAJOR")
AC_DEFINE_UNQUOTED(MODULE_MINOR, "$MODULE_MINOR")
DIRINST=~/NeoStats/
AC_PREFIX_DEFAULT(~/NeoStats/)
CFLAGS="$CFLAGS -O2 -fPIC -DPIC"

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL 

AC_MSG_CHECKING(Location of NeoStats...)
AC_ARG_WITH(neostats, 
[  --with-neostats=DIR	  Location of NeoStats installation],
[DIRINST=$withval])
AC_MSG_RESULT($DIRINST)


AC_CHECK_FILE($DIRINST/include/dl.h, 
[INCLUDEDIR="$DIRINST/include/"], 
[AC_MSG_ERROR(Can't find existing NeoStats Installation please supply with --with-neostats option)])

CPPFLAGS="$CPPFLAGS -I$INCLUDEDIR"
dnl Check we are running the latest supported version of NeoStats
AC_MSG_CHECKING(Version of NeoStats...)
AC_TRY_RUN(
[
#include <config.h>
#include <stdlib.h>
int main(void) {
	if (MAJOR >= 2) {
		if (MINOR >= 5) {
			if (REV >= 15) {
				exit(0);
			}
		}
	}
	exit(1);
}
],	ns_version_ok='yes',
	ns_version_ok='no',
	ns_version_ok='no')
if test "$ns_version_ok" = "yes"; then
	AC_MSG_RESULT(Compatible Version);
else
	AC_MSG_ERROR(This Module requires NeoStats 2.5.13 or Higher)
fi


dnl check if we are running with Debug....
AC_MSG_CHECKING(Whether to Enable Debuging...)
AC_ARG_ENABLE(debug,
[ --enable-debug - Enable Debuging],
[ case "$enableval" in
  yes)
        CFLAGS="$CFLAGS -Wall -ggdb"
	AC_DEFINE(DEBUG,1)
        AC_MSG_RESULT(yes - Watch your Log Files)
        ;;
  *)
        AC_MSG_RESULT(no)
        ;;
  esac],
AC_MSG_RESULT(no)
)

AC_SUBST(DIRINST)
AC_SUBST(CFLAGS)
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_OUTPUT(Makefile)
echo "(*----------------------------------------------------------*)"
echo "(| Important Instructions                                   |)"
echo "(*----------------------------------------------------------*)"
echo "(| Now that configure is complete, type 'make' to compile   |)"
echo "(| the module. When the compile has completed, type         |)"
echo "(| 'make install' to install the module.                    |)"
echo "(| For BSD you might need to use 'gmake' and 'gmake install'|)"
echo "(*----------------------------------------------------------*)"
echo "(| For Support please visit:                                |)"
echo "(|    IRC:                   /server irc.irc-chat.org       |)"
echo "(|                                   #neostats channel      |)"
echo "(|    WWW:   http://www.neostats.net/boards/                |)"
echo "(*----------------------------------------------------------*)"
echo "(|This Module was written by:                               |)"
echo "(|	DeadNotBurried (idontwantthisshit@hotmail.com)      |)"
echo "(*----------------------------------------------------------*)"